[project]
name = "dox-cli"
version = "0.1.0"
description = "CLI for browsing and consuming technical documentation, optimized for agentic tooling"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",
    "rich>=13.0",
]

[project.scripts]
dox = "dox.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dox"]
